--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ li a:hover {
     color: rgb(102, 102, 102);
   }
   .active {
-    background-color:  rgb(114, 184, 231);
+    background-color: #90BEC0;
     
   }
 /* Images and text styling */
@@ -528,8 +528,8 @@ div.g-pinscher#g-p {
 form {
     display: table;
     position: relative;
-    transform: translate(50%, 50%);
-
+   grid-area: form;
+   margin: 0 auto;
 }
 
 label {
@@ -543,10 +543,10 @@ label {
 #form {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 200px;
-    grid-template-areas: 
+    grid-template-rows: auto 700px auto;
+    grid-template-areas:
         "hd"
-        "a"
+        "form"
         "foot";
 }
 
@@ -573,7 +573,7 @@ input {
     font-size: 1em;
     height: 20px;
     border: 1px solid gray;
-    border: 2px solid rgb(66, 147, 212);
+    border: 2px solid #5f0f40;
     border-radius: 5px;
     width: 300px;
     display: table-cell;
@@ -581,14 +581,14 @@ input {
 .join-form {
     max-width: 600px;
     width: 100%;
-    background: rgb(236, 207, 77);
+    background: #DB7F8E;
     margin: 20px auto;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.486);
     border-radius: 20px;
     padding: 30px;
 }
 #form-title {
-    font-family: Hubballi, sans-serif;
+    font-family:  Playfair Display SC, sans-serif;
     font-size: 1.1em;
     color: black;
     font-weight: bold;
@@ -596,7 +596,7 @@ input {
 }
 label {
     margin: 0 0 20px;
-    font-family: Hubballi, sans-serif;
+    font-family:  Playfair Display SC, sans-serif;
     font-size: .9em;
     
 }
@@ -611,18 +611,23 @@ label {
     top: 6px;
 }
 option {
-    font-family: Hubballi, sans-serif;
+    font-family:  Playfair Display SC, sans-serif;
     
 }
 .btn {
-    font-family: Hubballi, sans-serif;
+    font-family:  Playfair Display SC, sans-serif;
     font-size: .9em;
-    
-    border: 2px solid rgb(46, 104, 151);
-    border-radius: 8px;
+    border: 1px solid black;
+    border-radius: 2px;
     margin: 20px 0 20px 0;
-    background: rgb(66, 147, 212);
+    background: white;
     cursor: pointer;
+}
+button{
+   padding: 5px;
+}
+input[value="Reset Form"] {
+    width: inherit;
 }
 
 /* Playground page */
