Make basic layout for playground page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -632,14 +632,9 @@ input[value="Reset Form"] {
 
 /* Playground page */
 .background-playground {
-    background-color: rgba(107, 170, 128, 0.877);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    width: 100%;
-    height: 100vh;
+    background-color: beige;
 }
+
 /* Gym page */
 .background-gym {
     background-color: rgba(88, 109, 126, 0.795);
@@ -1339,5 +1334,15 @@ div.g-pinscher#g-p {
 }
 }
 
-
+/* Form media queries*/
+@media screen and (max-width:500px) {
+    .fieldinput {
+        width: 100%;
+        max-width: 300px;
+    }
+input {
+    border-radius: 5px;
+    width: 250px;
+}
+}
  
