--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -641,14 +641,17 @@ body#playground {
     grid-template-columns: auto;
     grid-template-rows: auto 80px 600px 80px auto auto;
     grid-template-areas:
-        "hd"
-        "text"
-        "img1"
-        "img2"
-        "img3"
-        "img4"
-        "foot";
+    "hd"
+    "text"
+    "img1"
+    "img2"
+    "img3"
+    "img4"
+    "play"
+    "questions"
+    "foot";
 }
+
 .container-play {
     background-image: url("../images/dogs-img.png");
     width: 100%;
@@ -694,12 +697,10 @@ body#playground {
 }
 .play-image {
     grid-area: img4;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-                        "swing bench";
-
-        }
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 img.swing {
     grid-area: swing;
 }
@@ -728,16 +729,12 @@ img.swing, img.bench {
     margin:20px;
     font-size: 1.1em;
 }
-/* Gym page */
-.background-gym {
-    background-color: rgba(88, 109, 126, 0.795);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    width: 100%;
-    height: 100vh;
+/* -------------------------------------- Gym page --------------------------------------*/
+.weight {
+    grid-area: text;
+    margin: 20px;
 }
+
 /* Media Queries*/
 @media only screen and (max-width: 500px) {
   
@@ -847,13 +844,15 @@ body#playground {
     grid-template-columns: auto;
     grid-template-rows: auto 80px 300px 50px auto auto;
     grid-template-areas:
-        "hd"
-        "text"
-        "img1"
-        "img2"
-        "img3"
-        "img4"
-        "foot";
+    "hd"
+    "text"
+    "img1"
+    "img2"
+    "img3"
+    "img4"
+    "play"
+    "questions"
+    "foot";
 }
 .container-play p {
     grid-template-columns: 70%;
@@ -951,14 +950,16 @@ body#playground {
         grid-template-columns: auto;
         grid-template-rows: auto 80px 400px 50px auto auto;
         grid-template-areas:
-            "hd"
-            "text"
-            "img1"
-            "img2"
-            "img3"
-            "img4"
-            "foot";
-    }
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "play"
+        "questions"
+        "foot";
+}
     .p-reason div {
         font-size: .8em;
     }
@@ -972,14 +973,16 @@ body#playground {
         grid-template-columns: auto;
         grid-template-rows: auto 80px 400px 80px auto auto;
         grid-template-areas:
-            "hd"
-            "text"
-            "img1"
-            "img2"
-            "img3"
-            "img4"
-            "foot";
-    }
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "play"
+        "questions"
+        "foot";
+}
     body {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -1094,14 +1097,16 @@ body#playground {
         grid-template-columns: auto;
         grid-template-rows: auto 80px 400px 80px auto auto;
         grid-template-areas:
-            "hd"
-            "text"
-            "img1"
-            "img2"
-            "img3"
-            "img4"
-            "foot";
-    }
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "play"
+        "questions"
+        "foot";
+}
     body {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -1238,14 +1243,16 @@ body#playground {
         grid-template-columns: auto;
         grid-template-rows: auto 80px 600px 80px auto auto;
         grid-template-areas:
-            "hd"
-            "text"
-            "img1"
-            "img2"
-            "img3"
-            "img4"
-            "foot";
-    }
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "play"
+        "questions"
+        "foot";
+}
     body.background {
         grid-template-columns: 45% 1fr;
     grid-template-rows: auto auto 600px 600px auto;
@@ -1373,14 +1380,16 @@ body#playground {
         grid-template-columns: auto;
         grid-template-rows: auto 80px 900px 80px auto auto;
         grid-template-areas:
-            "hd"
-            "text"
-            "img1"
-            "img2"
-            "img3"
-            "img4"
-            "foot";
-    }
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "play"
+        "questions"
+        "foot";
+}
 body.background {
     display: grid;
     grid-template-columns: 45% auto;
