--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -738,17 +738,18 @@ img.swing, img.bench {
 body#gym {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 110px 700px auto;
-    grid-template-areas: 
-                        "hd"
-                        "text"
-                        "img1"
-                        "img2"
-                        "img3"
-                        "gym"
-                        "img"
-                        "table"
-                        "foot";
+    grid-template-rows: auto 110px 760px auto;
+    grid-template-areas:
+        "hd"
+        "text"
+        "img1"
+        "img2"
+        "img3"
+        "gym"
+        "img"
+        "table"
+        "dog"
+        "foot";
 }
 .gym-container { 
     grid-area: img1;
@@ -757,6 +758,7 @@ body#gym {
     margin: 0 auto;
     display: flex;
     border-radius: 10%;
+    border: 50px solid white;
 }
 .gym-box, .gym-box1 {
     font-size: 2rem;
@@ -802,10 +804,15 @@ body#gym {
     font-size: 1.1em;
     margin: 20px;
     border: 1px solid;
+    padding: 5px;
 }
 .gym-box1 a {
     color: beige;
     cursor: pointer;
+}
+.yoga-dog img {
+    width: 100%;
+    height: 100%;
 }
 /*----------------------------------------- Table -----------------------------------------*/
 table.classes-table {
